tpGCPdjangoapp/mc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mc-service
spec:
  selector:
    app: mc-service
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      #If you don't provide a specific nodePort: It will just grab one from the Valid range (30000-32767)
