tpGCPdjangoapp/tpgcpdjangoapp.yaml
# [START kubernetes_deployment]
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tpgcpdjangoapp
  labels:
    app: tpgcpdjangoapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tpgcpdjangoapp
  template:
    metadata:
      labels:
        app: tpgcpdjangoapp
    spec:
      containers:
      - name: tpgcpdjangoapp-app
        # Replace  with your project ID or use `make template`
        image: ghcr.io/isnoble/test-pipeline-gcp:main
        # This setting makes nodes pull the docker image every time before
        # starting the pod. This is useful when debugging, but should be turned
        # off in production.
        imagePullPolicy: Always
        ports:
        - containerPort: 8080      
# [END kubernetes_deployment]

---

# [START service]
# The polls service provides a load-balancing proxy over the polls app
# pods. By specifying the type as a 'LoadBalancer', Kubernetes Engine will
# create an external HTTP load balancer.
# For more information about Services see:
#   https://kubernetes.io/docs/concepts/services-networking/service/
# For more information about external HTTP load balancing see:
#   https://kubernetes.io/docs/tasks/access-application-cluster/create-external-load-balancer/
apiVersion: v1
kind: Service
metadata:
  name: tpgcpdjangoapp
  labels:
    app: tpgcpdjangoapp
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: tpgcpdjangoapp
# [END service]
